<resources>
    <string name="app_name">Location App</string>
    <string name="permission_not_granted">You need to grant the app permission to see your location first.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="bottom_sheet_peek">More Location Details...</string>
    <string name="gps">GPS</string>
    <string name="accuracy">Accuracy:</string>
    <string name="longitude">Longitude:</string>
    <string name="latitude">Latitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="loading">Loading...</string>
    <string name="network">Network</string>
</resources>
