<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/bottom_sheet_peek"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="28sp"
            android:textFontWeight="700"
            android:layout_marginTop="10dp"
            android:background="#EEEEEE"
            android:text="@string/gps"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/accuracy"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/gpsAccuracy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/altitude"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/gpsAltitude"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/latitude"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/gpsLatitude"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/longitude"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/gpsLongitude"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="28sp"
            android:textFontWeight="700"
            android:layout_marginTop="30dp"
            android:background="#EEEEEE"
            android:text="@string/network"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/accuracy"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/networkAccuracy"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/altitude"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/networkAltitude"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/latitude"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/networkLatitude"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/longitude"
                android:textColor="@android:color/black" />
            <TextView
                android:id="@+id/networkLongitude"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textFontWeight="700"
                android:layout_marginTop="10dp"
                android:text="@string/loading"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>